[metadata]
name = resid
version = 0.0.1
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Analyses resources identifiers to extract valuable information
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/resid
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/resid/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python
keywords = 
    identifier
    resources
    url
    uri

[options]
package_dir =
    = source
packages = find:
install_requires =

#python_requires = >=3.6

[options.packages.find]
where=source
